--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">ApiManager</string>
+    <string name="hint_login_username">username</string>
+    <string name="hint_login_password">password</string>
 </resources>
